Version 2.4.5
--------------------------------------------------------------------
3 October 2007
+ Added search to groups listing.
+ Added missing pager navigation to groups listing.
+ Updated: templates/manager/groups.tpl

27 September 2007
+ Added missing ability to activate and deactivate users.
+ Added error page should deactivated user attempt to log in.
+ Added link to settings page that re-registers module permissions.
+ Moved Activate and Deactivate commands to the Active Yes/No column.
+ Deities cannot be deactivated.
+ Fixed Vietnamese language abbreviation.
+ Updated: conf/error.php, conf/languages.php,
  templates/forms/settings.tpl 

Version 2.4.4
--------------------------------------------------------------------
24 September 2007
+ Added check all buttons to permissions form.
+ Changed bad key error in the popup permission menu.
+ Updated: conf/error.php, templates/forms/permissions.tpl
+ Copy directory: javascript/check_all/

21 September 2007
+ Removed the line item formatting for the permission radio buttons.
+ Updated: templates/forms/permission_pop.tpl

20 September 2007
+ Session timeout on permission popup refreshes parent to login
  screen. 

19 September 2007
+ Increase popup permission height.
+ A group can no longer be a member of itself.
+ Group file tidied. allow parameter renamed module for clarity.
+ giveItemPermission now checks each group for edit permission before
  giving them item rights.

Version 2.4.3
--------------------------------------------------------------------
+ Applied patch for item #1795677. Uses user status not logged status
for the User->allow function. Thanks Eloi.

Version 2.4.2
------------------------------------------------------------------
30 August 2007
+ Added parameter to disallow which determines whether to check login.

27 August 2007
+ Changed default disallow action on anonymous users. Now forwards
  them to the login screen.

22 August 2007
+ HOME tag no longer sent to template if logging in