@@ -1,6 +1,7 @@
 Version 2.4.5
 --------------------------------------------------------------------
 3 October 2007
++ RFE #1757530 added - admin can set reserved user name list.
 + Added search to groups listing.
 + Added missing pager navigation to groups listing.
 + Updated: templates/manager/groups.tpl
